--- a/svc/hecate/src/components/common/MarkdownRenderer.module.scss
+++ b/svc/hecate/src/components/common/MarkdownRenderer.module.scss
@@ -18,6 +18,7 @@ $text-color: #c8c8d0;
 .markdownContainer {
   line-height: 1.6;
   color: $text-color;
+  text-align: left;
   
   // Headings
   h1, h2, h3, h4, h5, h6 {
