--- a/svc/hecate/src/common/components/stars/stars.module.scss
+++ b/svc/hecate/src/common/components/stars/stars.module.scss
@@ -9,7 +9,7 @@
 
 // Theme-specific styles
 .null {
-  // Default theme - no additional styles needed
+  filter: brightness(1.2) contrast(1.1) saturate(0.9);
 }
 
 .matrix {
@@ -18,6 +18,6 @@
 
 
 .light {
-  filter: brightness(1.5) contrast(0.8);
+  filter: brightness(1.2) contrast(1.1) saturate(0.9);
 }
 
