--- a/svc/hecate/src/common/components/stars/stars.module.scss
+++ b/svc/hecate/src/common/components/stars/stars.module.scss
@@ -9,13 +9,12 @@
 
 // Theme-specific styles
 .null {
-  filter: brightness(1.2) contrast(1.1) saturate(0.9);
-}
-
-.matrix {
   filter: hue-rotate(90deg) brightness(1.2);
 }
 
+.dark {
+  filter: brightness(1.2) contrast(1.1) saturate(0.9);
+}
 
 .light {
   filter: brightness(1.2) contrast(1.1) saturate(0.9);
